test/TestPhases/namecheck/valid/programGloballyOpen.blc


function f()
end

function g(f: int32) end

@[EntryPoint]
activity Main()
    await true
end